--- a/typescript-tutorial/package.json
+++ b/typescript-tutorial/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery": "^3.2.16",
     "typescript": "^2.6.2"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4"
   }
 }
